# normalizing-flow-regression

./: .gitignore  .pre-commit-config.yaml  README.md  demo.ipynb  environment.yml  pyproject.toml  requirements.txt
benchflow/: README.md  setup.py
benchflow/benchflow/algorithms/: __init__.py  flow_bench.py
benchflow/benchflow/plotting/: utils.py
benchflow/benchflow/posteriors/: __init__.py  flow_posterior.py
benchflow/benchflow/reference_samples/: multi_banana_D_6_N_2_default.csv
benchflow/benchflow/tasks/: __init__.py
docs/: index.html  scripts.js  styles.css
docs/paper/: README.md
nflows/: README.md  setup.py
nflows/examples/: conditional_moons.ipynb  moons.ipynb
nflows/nflows/distributions/: base.py  discrete.py  normal.py  uniform.py
nflows/nflows/flows/: autoregressive.py  base.py
nflows/nflows/transforms/: autoregressive.py  base.py  coupling.py  linear.py  lu.py  made.py  nonlinearities.py  normalization.py  orthogonal.py  permutations.py  qr.py  reshape.py  standard.py  svd.py
nflows/nflows/utils/: torchutils.py
nflows/tests/distributions/: discrete_test.py  normal_test.py
nflows/tests/flows/: autoregressive_test.py  base_test.py  realnvp_test.py
nflows/tests/transforms/: autoregressive_test.py  base_test.py  coupling_test.py  linear_test.py  lu_test.py  made_test.py  nonlinearities_test.py  (+6 more)
nfr/: __init__.py  flow_helpers.py  function_logger.py  iteration_history.py  lbfgs.py  nfr.py  nfr_helpers.py  options.py  parameter_transformer.py  training_wrappers.py  utils.py
nfr/option_configs/: advanced_options.ini  basic_options.ini
(+15 files in other folders)
